Fixed background image alignment for Interactive Graph widget.
Turns out I inadvertently broke this when adding more options
(and thus, more height) to the graph widget. Segregating the
background image and graphie div from the other options fixes
alignment, regardless of the widget's width and height.

Down the line we should either move all options to the
InteractiveGraphEditor component or else expose some of these
options to users to allow for more complex problems.

Test Plan:
Added a background image to the Interactive Graph with graph
markings on to verify that it aligned the same in both the
preview and solution-setting areas.

Auditors: jack

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -97,8 +97,12 @@
 
 .perseus-widget-interactive-graph {
     padding: 25px 25px 0 0;
-    position: relative;
-    img {
+
+    > .graphie-container {
+        position: relative
+    }
+
+    > .graphie-container > img {
         position: absolute;
     }
 }
